--- a/.gitignore
+++ b/.gitignore
@@ -138,4 +138,15 @@ dmypy.json
 cython_debug/
 
 # visual studio code
-.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
