--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,6 @@ on:
   push:
     branches: [ master ]
   pull_request:
-  schedule:
-    - cron: '0 10 * * *'
 
 jobs:
   build:
@@ -19,22 +17,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install gdb
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install gdb
-        echo 0 | sudo tee /proc/sys/kernel/yama/ptrace_scope
-    - name: Setup lldb
-      if: matrix.os == 'macos-latest'
-      uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: latest-stable
+        cache: 'pip'
     - name: Install dependencies
       if: matrix.os != 'windows-latest'
       run: |
