--- a/requirements.txt
+++ b/requirements.txt
@@ -32,4 +32,7 @@ sphinxcontrib-napoleon
 skorch
 pooch
 pylsl
+# pip install psychopy failed on mac[py37, py38], due to wxpython build problem
+wxPython==4.1.1; sys_platform == 'darwin'
+pyglet==1.5.27; sys_platform == 'darwin'
 psychopy == 2020.1.2
