only specify wxpython when mac[py37, py38]

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,6 @@ skorch
 pooch
 pylsl
 # pip install psychopy failed on mac[py37, py38], due to wxpython build problem
-wxPython==4.1.1; sys_platform == 'darwin'
-pyglet==1.5.27; sys_platform == 'darwin'
+wxPython==4.1.1; sys_platform == 'darwin' and python_version <= '3.8'
+pyglet==1.5.27; sys_platform == 'darwin' and python_version <= '3.8'
 psychopy == 2020.1.2
