--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pylsl
 wxPython==4.1.1; sys_platform == 'darwin' and python_version <= '3.8'
 pyglet==1.5.27; sys_platform == 'darwin' and python_version <= '3.8'
 psychopy == 2022.1.4
+mne-bids
 
 Sphinx
 sphinxcontrib-napoleon
