--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ pooch
 pylsl
 pillow
 seaborn
-pywt
+PyWavelets
 # pip install psychopy failed on mac[py37, py38], due to wxpython build problem
 wxPython==4.1.1; sys_platform == 'darwin' and python_version <= '3.8'
 pyglet==1.5.27; sys_platform == 'darwin' and python_version <= '3.8'
