--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,242 @@
-# pytorch
--f https://download.pytorch.org/whl/torch_stable.html
-
-# Build Packages
-setuptools
-wheel
-twine
-
-# Lint & Coverage
-flake8
-mypy
-coverage
-
-# 3rd party packages
-mat73
-tqdm>=4.32.0
-torch>=1.7.1
+absl-py==2.2.2
+alabaster==1.0.0
+appdirs==1.4.4
+arabic-reshaper==3.0.0
+asttokens==3.0.0
+astunparse==1.6.3
+attrs==25.3.0
+autograd==1.7.0
+babel==2.17.0
+backcall==0.2.0
+backports.tarfile==1.2.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
+blosc2==2.7.1
+Brotli==1.1.0
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+cloudpickle==3.1.1
+colorama==0.4.6
+contourpy==1.3.1
+coverage==7.8.0
+cryptography==44.0.2
+cycler==0.12.1
+decorator==4.4.2
+defusedxml==0.7.1
+docopt==0.6.2
+docutils==0.21.2
+dukpy==0.2.3
+esprima==4.0.1
+et_xmlfile==2.0.0
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+flake8==7.2.0
+fonttools==4.57.0
+freetype-py==2.5.1
+fsspec==2025.3.2
+future==1.0.0
+gevent==24.11.1
+gitdb==4.0.12
+GitPython==3.1.44
+glfw==2.8.0
+google-api-core==2.24.2
+google-auth==2.38.0
+google-cloud==0.34.0
+google-cloud-speech==2.31.1
+googleapis-common-protos==1.69.2
+greenlet==3.1.1
+grpcio==1.71.0
+grpcio-status==1.48.2
+gym==0.26.2
+gym-notices==0.0.8
+h5py==3.13.0
+id==1.5.0
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+imagesize==1.4.1
+importlib_metadata==8.6.1
+inflate64==1.0.1
+iniconfig==2.1.0
+intel-openmp==2021.4.0
+ipython==8.12.3
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+javascripthon==0.13
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.4.2
+json-tricks==3.17.3
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyterlab_pygments==0.3.0
+keyring==25.6.0
+kiwisolver==1.4.8
+labelImg==1.8.6
+lazy_loader==0.4
+lxml==5.4.0
+m2r==0.3.1
+m2r2==0.3.3.post2
+Markdown==3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mat73==0.65
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdurl==0.1.2
+-e git+https://github.com/TBC-TJU/MetaBCI.git@63fcd394a76d36658005063b874a9815b8c5c9b9#egg=metabci
+mistune==3.1.3
+mkl==2021.4.0
+mne==1.9.0
+mne-bids==0.16.0
+more-itertools==10.6.0
+moviepy==1.0.3
+mpmath==1.3.0
+msgpack==1.1.0
+msgpack-numpy==0.4.8
+multivolumefile==0.2.3
+mypy==1.15.0
+mypy-extensions==1.0.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+ndindex==1.9.2
+networkx==3.4.2
+nh3==0.2.21
+numexpr==2.10.2
 numpy==1.23.5
-mne>=0.21.1
-pandas
-py7zr
-joblib
-autograd
-scipy
+opencv-python==4.11.0.86
+openpyxl==3.1.5
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pbr==6.1.1
+pickleshare==0.7.5
+Pillow==9.5.0
+pipreqs==0.5.0
+platformdirs==4.3.7
+playsound==1.3.0
+pluggy==1.5.0
+pockets==0.9.1
+pocketsphinx==5.0.4
+pooch==1.8.2
+proglog==0.1.11
+prompt_toolkit==3.0.51
+proto-plus==1.26.1
+protobuf==3.20.1
+psutil==7.0.0
+PsychoPy==2022.1.4
+psychtoolbox==3.0.19.14
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+py7zr==0.22.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybcj==1.0.3
+pybullet==3.2.7
+pycodestyle==2.13.0
+pycparser==2.22
+pycryptodomex==3.22.0
+pyflakes==3.3.2
+pygame==2.6.1
+pyglet==1.4.11
+Pygments==2.19.1
+pylsl==1.17.6
 pymanopt==0.2.5
-requests
-requests[socks]
-pytest
-h5py
-scikit_learn
-sphinxcontrib-napoleon
-skorch
-pooch
-pylsl
-# pip install psychopy failed on mac[py37, py38], due to wxpython build problem
-wxPython==4.1.1; sys_platform == 'darwin' and python_version <= '3.8'
-pyglet==1.5.27; sys_platform == 'darwin' and python_version <= '3.8'
-psychopy == 2022.1.4
-mne-bids
-
-Sphinx
-sphinxcontrib-napoleon
-sphinxcontrib-apidoc
-sphinx-rtd-theme
-m2r
-m2r2
+pyo==1.0.5
+pyparsing==3.2.3
+pypiwin32==223
+pyppmd==1.1.1
+pyqmix==2021.1.2
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.0
+pyrealsense2==2.55.1.6486
+pyserial==3.5
+PySocks==1.7.1
+pytest==8.3.5
+python-bidi==0.6.6
+python-dateutil==2.9.0.post0
+python-gitlab==5.6.0
+python-vlc==3.0.11115
+pytz==2025.2
+pywin32==310
+pywin32-ctypes==0.2.3
+pyWinhook==1.6.2
+PyYAML==6.0.2
+pyzmq==26.4.0
+pyzstd==0.16.2
+questplus==2023.1
+readme_renderer==44.0
+referencing==0.36.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==14.0.0
+roman-numerals-py==3.1.0
+rpds-py==0.26.0
+rsa==4.9
+ruamel.yaml==0.16.3
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+six==1.17.0
+skorch==1.1.0
+smmap==5.0.2
+snowballstemmer==2.2.0
+sounddevice==0.5.1
+soundfile==0.13.1
+soupsieve==2.7
+SpeechRecognition==3.14.2
+Sphinx==8.2.3
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-apidoc==0.5.0
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-napoleon==0.7
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+stack-data==0.6.3
+sympy==1.13.1
+tables==3.10.2
+tabulate==0.9.0
+tbb==2021.11.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+texttable==1.7.0
+thop==0.1.1.post2209072238
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+torch==2.3.1+cu118
+torchaudio==2.3.1+cu118
+torchvision==0.18.1+cu118
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+twine==6.1.0
+typing_extensions==4.13.1
+tzdata==2025.2
+ujson==5.10.0
+urllib3==2.3.0
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wxPython==4.2.2
+xarray==2024.7.0
+xlrd==2.0.1
+yarg==0.1.9
+zipp==3.21.0
+zope.event==5.0
+zope.interface==7.2
