Add mne-bids dependency to environment and requirements files
- Included `mne-bids` in `environment.yml`, `pyproject.toml`, and `requirements.txt` to ensure compatibility with the latest features and functionalities required for the project.
- Removed the previous entry of `mne-bids` from the documentation dependencies in `pyproject.toml` to streamline the dependency management.

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ joblib
 # ============== brainda (datasets, algorithms, deep learning) ==============
 mat73
 mne>=0.21.1
+mne-bids
 pandas
 py7zr
 h5py
